+ [B][COLOR lime]1.4.0[/B][/COLOR] [COLOR gold](11-12-2018)[/COLOR]
- fix search link
- better search function
  store/remove search queries
- add View-Mode on settings to select view-type for menu and titles

+ [B][COLOR lime]1.3.0[/B] [COLOR gold](01-12-2018)[/COLOR]
- add cloudflare support
  (but no title's icon when website uses cloudflare-protection)
- add clear cache and settings on context menu for faster access!
- add check function for website state (with or without cloudflare)

+ [B][COLOR lime]1.2.0[/B] [COLOR gold](28-11-2018)[/COLOR]
- Fix Search Error
- Add Settings
  Enable/Disable View Size|'Dead' Links function
  (If this enabled, addon first checks
   if the links are alive and then
   shows them in a list with the file size)
- Code cosmetics

+ [B][COLOR lime]1.1.1[/B] [COLOR gold](26-11-2018)[/COLOR]
- Fix unicode errors(PLOT)
- Code cosmetics

+ [B][COLOR gold]1.1.0[/B] [COLOR gold](19-11-2018)[/COLOR]
- Add Cache function(Menus open faster-reduce website traffic)
- New artwork (icon/fanart)
- Add Version on main menu(ForceUpdate)
- Code cosmetics

+ [B][COLOR gold]1.0.1[/B] [COLOR gold](13-11-2018)[/COLOR]
- Fix title's icons error
- Add Real-Debrid authorization

+ [B][COLOR gold]1.0.0[/B] [COLOR gold](13-11-2018)[/COLOR]
- Change domain to rlsbb.to
- Fix search function
- Code cosmetics